--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -97,15 +97,14 @@ jobs:
     steps:
       # Git Checkout
       - name: Checkout
-        if: ${{ matrix.enabled }}
+        if: ${{ matrix.enabled && inputs.ref != '' }}
         uses: actions/checkout@v6
-
-        if: ${{ inputs.ref != '' }}
         with:
           ref: ${{ inputs.ref }}
+
       - name: Git Checkout (default)
         uses: actions/checkout@v6
-        if: ${{ inputs.ref == '' }}
+        if: ${{ matrix.enabled && inputs.ref == '' }}
         with:
           fetch-depth: 1
 
