--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -68,10 +68,6 @@ on:
         type: string
         default: ''
         description: "List of cache export destinations for buildx (e.g., type=registry,ref=...)"
-      docker-secrets:
-        type: string
-        default: ''
-        description: "Secrets to pass to Docker build (e.g., 'SECRET_NAME=${{ secrets.SECRET_VALUE }}')"
     outputs:
       image_tag: 
         description: "The tag of the image that was built"
@@ -82,6 +78,9 @@ on:
         required: false
       registry-password:
         required: false
+      docker-secrets:
+        required: false
+        description: "Secrets to pass to Docker build (e.g., 'SECRET_NAME=secret_value')"
 
 jobs:
   # Generate dynamic matrix based on enabled platforms
@@ -194,7 +193,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           cache-from: ${{ inputs.cache-from }}
           cache-to: ${{ inputs.cache-to }}
-          secrets: ${{ inputs.docker-secrets }}
+          secrets: ${{ secrets.docker-secrets }}
           outputs: type=image,"name=${{ inputs.registry }}/${{ inputs.image-name }}",push-by-digest=true,name-canonical=true,push=true
 
       - name: Build and push Docker Image (single-platform)
@@ -211,7 +210,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           cache-from: ${{ inputs.cache-from }}
           cache-to: ${{ inputs.cache-to }}
-          secrets: ${{ inputs.docker-secrets }}
+          secrets: ${{ secrets.docker-secrets }}
           push: true
 
       - name: Output image tag (single-platform)
