--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -83,7 +83,7 @@ jobs:
   # Generate dynamic matrix based on enabled platforms
   setup:
     name: Setup Build Matrix
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runner-amd64 }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       multi-platform: ${{ steps.set-matrix.outputs.multi-platform }}
